# esp-dev-env

./: .gitignore  CMakeLists.txt  README.md  init.sh  install.sh  lib-install.sh  local-install.sh
esp-cmake/: ESP8266.bootstrap.cmake  ESP8266.cmake  toolchain.ESP8266.cmake
esp-cmake/Modules/Platform/: Generic-gcc-ESP8266.cmake
src/: CMakeLists.txt  user_config.h
src/hello_universe/: CMakeLists.txt  main.c
src/include/: esp.h
